data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1691.wast
;; 2. **Test Empty Value Stack on Condition Check**:    - **Description**: Invoke a `br_if` instruction with an empty value stack.    - **Constraint**: Ensures that the value stack contains the required i32 type for the condition check.    - **Incorrect Condition Evaluation**: The `br_if` instruction cannot find the condition value on the stack, leading to a potential unchecked error.

(assert_invalid
  (module (func $empty-stack-br_if
    (block (br_if 0))
  ))
  "type mismatch"
)